--- a/spring-thunder/src/main/webapp/WEB-INF/templates/pages/login/login.html
+++ b/spring-thunder/src/main/webapp/WEB-INF/templates/pages/login/login.html
@@ -31,32 +31,34 @@
 	cursor: pointer;
 }
 </style>
-<link rel="shortcut icon" href="${base}/assets/metronic/pages/img/login/logo.ico" />
+<link rel="shortcut icon" href="${base}/assets/spring-thunder/images/spring-thunder.ico " />
 <script src="${base}/assets/metronic/global/plugins/jquery.min.js" type="text/javascript"></script>
 <script src="${base}/assets/layer/layer.js" type="text/javascript"></script>
-<script src="${base}/assets/n-csm/js/common.js" type="text/javascript"></script>
-<script src="${base}/assets/n-csm/js/validation.js" type="text/javascript"></script>
+<script src="${base}/assets/spring-thunder/js/common.js" type="text/javascript"></script>
+<script src="${base}/assets/spring-thunder/js/validation.js" type="text/javascript"></script>
 </head>
 
 <body class=" login">
 	<div class="user-login-5">
 		<div class="row bs-reset">
 			<div class="col-md-6 bs-reset">
-				<div class="login-bg" style="background-image:url(${base}/assets/metronic/pages/img/login/bg1.jpg)">
-					<img class="login-logo" src="${base}/assets/metronic/pages/img/login/logo.png"  />
+				<div class="login-bg" style="background-image:url(${base}/assets/metronic/pages/img/login/1.jpg)">
+					<img class="login-logo" src="${base}/assets/spring-thunder/images/spring-thunder.png" />
 				</div>
 			</div>
 			<div class="col-md-6 login-container bs-reset">
 				<div class="login-content">
 					<h1>${config("application.name")}</h1>
-					<p>一个基于 nutz-onekey 实现的简单运维信息上报及运维审计系统</p>
+					<p>一个开箱即用的快速开发脚手架</p>
 					<form action="javascript:;" class="login-form" method="post">
 						<div class="row">
 							<div class="col-xs-4">
-								<input class="form-control form-control-solid placeholder-no-fix" type="text" data-type="required" autocomplete="off" placeholder="请输入用户名" name="username" id="user" value="${loginInfo.user! }"/>
+								<input class="form-control form-control-solid placeholder-no-fix" type="text" data-type="required" autocomplete="off" placeholder="请输入用户名" name="username" id="user"
+									value="${loginInfo.user! }" />
 							</div>
 							<div class="col-xs-4">
-								<input class="form-control form-control-solid placeholder-no-fix" data-type="password" type="password" autocomplete="off" placeholder="请输入密码" name="password" id="password" value="${loginInfo.password! }"  />
+								<input class="form-control form-control-solid placeholder-no-fix" data-type="password" type="password" autocomplete="off" placeholder="请输入密码" name="password" id="password"
+									value="${loginInfo.password! }" />
 							</div>
 							<div class="col-xs-4 form-group ">
 								<div class="input-group">
@@ -73,7 +75,7 @@
 							<div class="col-sm-4">
 								<div class="rem-password">
 									<p>
-										记住我 <input type="checkbox" class="rem-checkbox" id="rememberMeCheckBox" ${null != loginInfo.rememberMe && loginInfo.rememberMe!  ? 'checked' : '' } />
+										记住我 <input type="checkbox" class="rem-checkbox" id="rememberMeCheckBox" ${null !=loginInfo.rememberMe && loginInfo.rememberMe!  ? 'checked' : '' } />
 									</p>
 								</div>
 							</div>
@@ -141,9 +143,9 @@
 		$(function() {
 			//轮播
 			$('.login-bg').backstretch([
-				Common.getRootPath() + "/assets/metronic/pages/img/login/ops1.jpg",
-				Common.getRootPath() + "/assets/metronic/pages/img/login/ops2.jpg",
-				Common.getRootPath() + "/assets/metronic/pages/img/login/bg1.jpg"
+				Common.getRootPath() + "/assets/metronic/pages/img/login/1.jpg",
+				Common.getRootPath() + "/assets/metronic/pages/img/login/2.jpg",
+				Common.getRootPath() + "/assets/metronic/pages/img/login/3.jpg"
 			], {
 				fade : 500,
 				duration : 3000
