--- a/spring-thunder/src/main/webapp/WEB-INF/templates/pages/login/login.html
+++ b/spring-thunder/src/main/webapp/WEB-INF/templates/pages/login/login.html
@@ -113,6 +113,8 @@
 								</a></li>
 								<li><a href="javascript:;"> <i class="icon-social-dribbble"></i>
 								</a></li>
+								<li><a href="https://github.com/Kerbores/spring-thunder" target="_blank"> <i class="fa fa-github"></i>
+								</a></li>
 							</ul>
 						</div>
 						<div class="col-xs-8 bs-reset">
