--- a/spring-thunder/src/main/webapp/WEB-INF/templates/layout/default.html
+++ b/spring-thunder/src/main/webapp/WEB-INF/templates/layout/default.html
@@ -47,7 +47,7 @@
 			<div class="top-menu">
 				<ul class="nav navbar-nav pull-right">
 						<li class="dropdown dropdown-user"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true"> <img alt=""
-							class="img-circle" src="${null != loginUser('heanKey') ? loginUser('heanKey') : base + '/assets/metronic/layouts/layout/img/avatar3_small.jpg' }" /> <span class="username username-hide-on-mobile"> ${loginUser().realName } </span> <i
+							class="img-circle" src="${null != loginUser('heanKey') ? loginUser('heanKey') : base + '/assets/metronic/layouts/layout/img/avatar3_small.jpg' }" /> <span class="username username-hide-on-mobile"> ${loginUser('realName') } </span> <i
 							class="fa fa-angle-down"></i>
 							</a>
 					
