--- a/spring-thunder/src/main/webapp/WEB-INF/templates/pages/login/login.html
+++ b/spring-thunder/src/main/webapp/WEB-INF/templates/pages/login/login.html
@@ -49,7 +49,7 @@
 			<div class="col-md-6 login-container bs-reset">
 				<div class="login-content">
 					<h1>${config("application.name")}</h1>
-					<p>${config("application.desc")}一个开箱即用的快速开发脚手架</p>
+					<p>${config("application.desc")}</p>
 					<form action="javascript:;" class="login-form" method="post">
 						<div class="row">
 							<div class="col-xs-4">
