--- a/spring-thunder/src/main/webapp/WEB-INF/templates/layout/default.html
+++ b/spring-thunder/src/main/webapp/WEB-INF/templates/layout/default.html
@@ -91,12 +91,15 @@
 						</form>
 					</li>
 
-					<li class="nav-item ${ menu[0] =='main' ?'active open':''}"><a href="${base!}/system/main" class="nav-link nav-toggle"> <i class="fa fa-sticky-note"></i> <span
-							class="title">项目说明</span>
+					<li class="nav-item ${ menu[0] =='main' ?'active open':''}"><a href="${base!}/system/main" class="nav-link nav-toggle"> <i class="fa fa-sticky-note"></i> 
+						<span class="title">项目说明</span>
+						${ menu[0] =='main' ?'<span class="selected"></span>':''}
 					</a></li>
 
-					<li class="nav-item start ${ menu[0] =='apm' ?'active open':''}"><a href="javascript:;" class="nav-link nav-toggle"> <i class="fa fa-tachometer"></i> <span
-							class="title">APM控制台</span> <span class="arrow open"></span>
+					<li class="nav-item start ${ menu[0] =='apm' ?'active open':''}"><a href="javascript:;" class="nav-link nav-toggle"> <i class="fa fa-tachometer"></i> 
+						<span class="title">APM控制台</span> 
+						${ menu[0] =='apm' ?'<span class="selected"></span>':''}
+						<span class="arrow open"></span>
 					</a>
 						<ul class="sub-menu">
 							<li class="nav-item start ${ menu[1] =='apm' ?'active':''}"><a href="${base}/apm/dashboard" class="nav-link "> <i class="fa fa-server"></i> <span class="title">本机状态</span>
@@ -115,7 +118,9 @@
 					</li>
 
 
-					<li class="nav-item  ${ menu[0] =='acl' ?'active open':''}"><a href="javascript:;" class="nav-link nav-toggle"> <i class="icon-users"></i> <span class="title">访问控制</span>
+					<li class="nav-item  ${ menu[0] =='acl' ?'active open':''}"><a href="javascript:;" class="nav-link nav-toggle"> <i class="icon-users"></i> 
+							<span class="title">访问控制</span>
+							${ menu[0] =='acl' ?'<span class="selected"></span>':''}
 							<span class="arrow"></span>
 					</a>
 						<ul class="sub-menu">
@@ -135,31 +140,10 @@
 					<!--# if(hasPermission('config.list')){ #-->
 					<li class="nav-item ${ menu[0] =='config' ?'active open':''}"><a href="${base!}/config/list" class="nav-link nav-toggle"> <i class="icon-cogs fa fa-cogs"></i> <span
 							class="title">配置管理</span>
+							${ menu[0] =='config' ?'<span class="selected"></span>':''}
 					</a></li>
 					<!--# } #-->
 
-					<li class="nav-item  "><a href="javascript:;" class="nav-link nav-toggle"> <i class="icon-diamond"></i> <span class="title">UI Features</span> <span class="arrow"></span>
-					</a>
-						<ul class="sub-menu">
-							<li class="nav-item  "><a href="ui_colors.html" class="nav-link "> <span class="title">Color Library</span>
-							</a></li>
-							<li class="nav-item  "><a href="ui_general.html" class="nav-link "> <span class="title">General Components</span>
-							</a></li>
-							<li class="nav-item  "><a href="ui_buttons.html" class="nav-link "> <span class="title">Buttons</span>
-							</a></li>
-							<li class="nav-item  "><a href="ui_confirmations.html" class="nav-link "> <span class="title">Popover Confirmations</span>
-							</a></li>
-							<li class="nav-item  "><a href="ui_icons.html" class="nav-link "> <span class="title">Font Icons</span>
-							</a></li>
-							<li class="nav-item  "><a href="ui_socicons.html" class="nav-link "> <span class="title">Social Icons</span>
-							</a></li>
-							<li class="nav-item  "><a href="javascript:;" class="nav-link nav-toggle"> <span class="title">Page Progress Bar</span> <span class="arrow"></span>
-							</a>
-								<ul class="sub-menu">
-									<li class="nav-item "><a href="ui_page_progress_style_1.html" class="nav-link "> Flash </a></li>
-									<li class="nav-item "><a href="ui_page_progress_style_2.html" class="nav-link "> Big Counter </a></li>
-								</ul></li>
-						</ul></li>
 				</ul>
 			</div>
 		</div>
