--- a/spring-thunder/src/main/webapp/WEB-INF/templates/layout/blank.html
+++ b/spring-thunder/src/main/webapp/WEB-INF/templates/layout/blank.html
@@ -27,20 +27,20 @@
 <script src="${base}/assets/spring-thunder/js/common.js" type="text/javascript"></script>
 <script src="${base}/assets/spring-thunder/js/validation.js" type="text/javascript"></script>
 <style type="text/css">
+body{
+	background-color: #FFF;
+}
 label {
 	font-weight: 800
 }
-
 label small {
 	font-weight: 500
 }
 </style>
 </head>
 
-<body class="page-header-fixed page-sidebar-closed-hide-logo  page-md ">
-	<div class="page-content-wrapper">
-		<div class="page-content">${layoutContent}</div>
-	</div>
+<body class="no-skin">
+	${layoutContent}
 	<!--[if lt IE 9]>
 <script src="${base}/assets/metronic/global/plugins/respond.min.js"></script>
 <script src="${base}/assets/metronic/global/plugins/excanvas.min.js"></script> 
